初步菜单管理
